chore: add JVM options to open packages for reflective access